added search fetures and part of styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,18 @@
-$font-size: 1rem;
-$font-family: 'Inter', sans-serif;
-$background-color: #121212;
-$font-color: #dae0e0;
-$page-width: 650px;
+$main-color:#2196F3;
+$main-bg-color:#ffffff;
+$secondary-bg-color:#2F303A;
+$third-bg-color: #F5F4FA;
+$hero-button-bg-color:#188CE8;
+$hero-bg-color:#C4C4C4;
+$icon-bg-color: #AFB1B8;
+$logo-second-color:#000000;
+$main-font-color:#212121;
+$second-font-color:#757575;
+$white-font-color:#ffffff;
+$footer-font-color:rgba(255, 255, 255, 0.6);
+$footer-icon-bg-color:rgba(255, 255, 255, 0.1);
+$close-button-border: rgba(0, 0, 0, 0.1);
+$backdrop-bg-color: rgba(0, 0, 0, 0.2);
+$thumb-bg-color: rgba(33, 150, 243, 0.9);
+$card-set-gap: 30px;
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
