--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/Inter.ttf');
-}
-
-@import 'variables';
-@import 'scaffolding';
+@import './variables';
+@import './body.scss';
+@import './common';
+@import './form.scss';
