--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 $main-color:#2196F3;
-$main-bg-color:#ffffff;
+$main-bg-color:#212121;
 $secondary-bg-color:#2F303A;
 $third-bg-color: #F5F4FA;
 $hero-button-bg-color:#188CE8;
 $hero-bg-color:#C4C4C4;
 $icon-bg-color: #AFB1B8;
 $logo-second-color:#000000;
-$main-font-color:#212121;
+$main-font-color:#fff;
 $second-font-color:#757575;
 $white-font-color:#ffffff;
 $footer-font-color:rgba(255, 255, 255, 0.6);
@@ -16,3 +16,7 @@ $backdrop-bg-color: rgba(0, 0, 0, 0.2);
 $thumb-bg-color: rgba(33, 150, 243, 0.9);
 $card-set-gap: 30px;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+$glow-color: #d9b0ff;
+$glow-spread-color: #bf7bffc7;
+$enhanced-glow-color: rgb(231, 206, 255);
