--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,20 +1,27 @@
 // @import '~node_modules/modern-normalize/modern-normalize.css';
-
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .projects {
     display: flex;
     flex-wrap: wrap;
-    margin: -15px;
+    margin-top: -15px;
+    margin-left: -15px;
 }
 
 .projects__item {
     margin: 15px;
 
     @media screen and (min-width: 768px) {
-    width: calc((100% - 2 * 30px) / 2);
+    flex-basis: calc((100% - 2 * 30px) / 2);
   }
 
     @media screen and (min-width: 1200px) {
-    width: calc((100% - 3 * 30px) / 3);
+    flex-basis: calc((100% / 3) - 30px);
     
   }
 
@@ -22,7 +29,9 @@
     
    &:hover,
    &:focus {
-   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+   box-shadow: 0 0 1em .25em var(--glow-color),
+        0 0 4em 1em var(--glow-spread-color),
+     0 0 .75em .25em var(--glow-color);
 }
 }
 
